--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,8 +1,8 @@
 #-------------------------------
 # General Site Settings
 
-title: Artists Theme
-email: devtipsfordesigners@gmail.com
+title: Portfolio Website
+email: emptymail@gmail.com
 
 # NOTE: The Logo and Background image are defined in the all.sass document.
 
