another fix of avatar

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,6 @@
 #-------------------------------
 # General Site Settings
-
+avatar: 'face.jpg'
 title: My Portfolio
 email: alsushkevich@gmail.com
 
