--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -49,14 +49,13 @@ skills:
 # Work Section
 
 projects:
-- {name: Project1, folder: 'proj-1', file: 'work/proj-1.html'}
-- {name: Project1, folder: 'proj-1', file: 'work/proj-1.html'}
-- {name: Project1, folder: 'proj-1', file: 'work/proj-1.html'}
-- {name: Project1, folder: 'proj-1', file: 'work/proj-1.html'}
-- {name: Project1, folder: 'proj-1', file: 'work/proj-1.html'}
-- {name: Project1, folder: 'proj-1', file: 'work/proj-1.html'}
-- {name: Project1, folder: 'proj-1', file: 'work/proj-1.html'}
-- {name: Project1, folder: 'proj-1', file: 'work/proj-1.html'}
+- {name: Blackjack, folder: 'proj-1', file: 'work/proj-1.html'}
+- {name: Project8, folder: 'proj-8', file: 'work/proj-8.html'}
+- {name: Project8, folder: 'proj-8', file: 'work/proj-8.html'}
+- {name: Project8, folder: 'proj-8', file: 'work/proj-8.html'}
+
+
+
 # - {name: City-IN website concept, folder: 'proj-2', file: 'work/proj-2.html'}
 # - {name: Crispy Icons, folder: 'proj-3', file: 'work/proj-3.html'}
 # - {name: Flat Mobile UI/UX Concept, folder: 'proj-4', file: 'work/proj-4.html'}
