--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -49,7 +49,7 @@ skills:
 # Work Section
 
 projects:
-- {name: Blackjack, folder: 'proj-1', file: 'work/proj-1.html'}
+- {name: Newsroom, folder: 'proj-1', file: 'work/proj-1.html'}
 - {name: RiceRocks, folder: 'proj-2', file: 'work/proj-2.html'}
 - {name: Move, folder: 'proj-3', file: 'work/proj-3.html'}
 - {name: Red eye photography, folder: 'proj-4', file: 'work/proj-4.html'}
