--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -53,6 +53,7 @@ projects:
 - {name: RiceRocks, folder: 'proj-2', file: 'work/proj-2.html'}
 - {name: Move, folder: 'proj-3', file: 'work/proj-3.html'}
 - {name: Red eye photography, folder: 'proj-4', file: 'work/proj-4.html'}
+- {name: Excursion, folder: 'proj-5', file: 'work/proj-5.html'}
 
 
 
