--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -54,6 +54,9 @@ projects:
 - {name: Move, folder: 'proj-3', file: 'work/proj-3.html'}
 - {name: Red eye photography, folder: 'proj-4', file: 'work/proj-4.html'}
 - {name: Excursion, folder: 'proj-5', file: 'work/proj-5.html'}
+- {name: Bass, folder: 'proj-6', file: 'work/proj-6.html'}
+- {name: Adoptly, folder: 'proj-7', file: 'work/proj-7.html'}
+- {name: Bolt network, folder: 'proj-8', file: 'work/proj-8.html'}
 
 
 
