--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -16,10 +16,10 @@ menu:
 
 # NOTE: Providing SEO information will make this website more searchable on the internet.
 
-seo:
-  description: 'Provide a description for your website to make it visible to search engines.'
-  rel-author: 'https://plus.google.com/u/0/+DevTipsForDesigners/'
-  rel-publisher: 'https://plus.google.com/u/0/+DevTipsForDesigners/'
+# seo:
+#   description: 'Provide a description for your website to make it visible to search engines.'
+#   rel-author: 'https://plus.google.com/u/0/+DevTipsForDesigners/'
+#   rel-publisher: 'https://plus.google.com/u/0/+DevTipsForDesigners/'
 
 #-------------------------------
 # Google Analytics Section
