--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -52,7 +52,7 @@ projects:
 - {name: Newsroom, folder: 'proj-1', file: 'work/proj-1.html'}
 - {name: RiceRocks, folder: 'proj-2', file: 'work/proj-2.html'}
 - {name: Move, folder: 'proj-3', file: 'work/proj-3.html'}
-- {name: Red eye photography, folder: 'proj-4', file: 'work/proj-4.html'}
+- {name: Agency website, folder: 'proj-4', file: 'work/proj-4.html'}
 - {name: Excursion, folder: 'proj-5', file: 'work/proj-5.html'}
 - {name: Bass, folder: 'proj-6', file: 'work/proj-6.html'}
 - {name: Adoptly, folder: 'proj-7', file: 'work/proj-7.html'}
