--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -55,7 +55,7 @@ projects:
 - {name: Agency website, folder: 'proj-4', file: 'work/proj-4.html'}
 - {name: Excursion, folder: 'proj-5', file: 'work/proj-5.html'}
 - {name: Bass, folder: 'proj-6', file: 'work/proj-6.html'}
-- {name: Adoptly, folder: 'proj-7', file: 'work/proj-7.html'}
+- {name: To-do app, folder: 'proj-7', file: 'work/proj-7.html'}
 - {name: Bolt network, folder: 'proj-8', file: 'work/proj-8.html'}
 
 
