--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -50,15 +50,17 @@ skills:
 
 projects:
 - {name: Newsroom, folder: 'proj-1', file: 'work/proj-1.html'}
-- {name: RiceRocks, folder: 'proj-2', file: 'work/proj-2.html'}
-- {name: Move, folder: 'proj-3', file: 'work/proj-3.html'}
+# - {name: RiceRocks, folder: 'proj-2', file: 'work/proj-2.html'}
 - {name: Agency website, folder: 'proj-4', file: 'work/proj-4.html'}
-- {name: Excursion, folder: 'proj-5', file: 'work/proj-5.html'}
+- {name: Move, folder: 'proj-3', file: 'work/proj-3.html'}
+# - {name: Excursion, folder: 'proj-5', file: 'work/proj-5.html'}
 - {name: Bass, folder: 'proj-6', file: 'work/proj-6.html'}
-- {name: To-do app, folder: 'proj-7', file: 'work/proj-7.html'}
+# - {name: To-do app, folder: 'proj-7', file: 'work/proj-7.html'}
 - {name: Bolt network, folder: 'proj-8', file: 'work/proj-8.html'}
-- {name: Frogger game, folder: 'proj-9', file: 'work/proj-9.html'}
-- {name: Video app, folder: 'proj-10', file: 'work/proj-10.html'}
+# - {name: Frogger game, folder: 'proj-9', file: 'work/proj-9.html'}
+- {name: Video spa, folder: 'proj-10', file: 'work/proj-10.html'}
+- {name: AFG landing page, folder: 'proj-11', file: 'work/proj-11.html'}
+- {name: AFG landing page, folder: 'proj-12', file: 'work/proj-12.html'}
 
 
 
