--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -60,7 +60,7 @@ projects:
 # - {name: Frogger game, folder: 'proj-9', file: 'work/proj-9.html'}
 - {name: Video spa, folder: 'proj-10', file: 'work/proj-10.html'}
 - {name: AFG landing page, folder: 'proj-11', file: 'work/proj-11.html'}
-- {name: AFG landing page, folder: 'proj-12', file: 'work/proj-12.html'}
+- {name: Barbershop, folder: 'proj-12', file: 'work/proj-12.html'}
 
 
 
