--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -57,7 +57,7 @@ projects:
 - {name: Bass, folder: 'proj-6', file: 'work/proj-6.html'}
 # - {name: To-do app, folder: 'proj-7', file: 'work/proj-7.html'}
 - {name: Bolt network, folder: 'proj-8', file: 'work/proj-8.html'}
-# - {name: Frogger game, folder: 'proj-9', file: 'work/proj-9.html'}
+- {name: Frogger game, folder: 'proj-9', file: 'work/proj-9.html'}
 - {name: Video spa, folder: 'proj-10', file: 'work/proj-10.html'}
 - {name: AFG landing page, folder: 'proj-11', file: 'work/proj-11.html'}
 - {name: Barbershop, folder: 'proj-12', file: 'work/proj-12.html'}
