--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -38,13 +38,13 @@ menu:
 
 skills:
 - {name: Communication, value: '8'}
-- {name: Programming, value: '7'}
+- {name: Programming, value: '9'}
 - {name: Organization, value: '9'}
 - {name: Responsive Web Design, value: '8'}
 - {name: Planning, value: '7'}
 - {name: Website Optimization, value: '7'}
 - {name: Learning, value: '10'}
-- {name: Version Control, value: '6'}
+- {name: DevOps skills, value: '7'}
 
 # Work Section
 
